@@ -385,6 +385,9 @@ let contains      = contains
 let contains_from = contains_from
 let rcontains_from= rcontains_from
 let find          = find
+let find_from     = find_from
+let rfind         = rfind
+let rfind_from    = rfind_from
 let ends_with     = ends_with
 let starts_with   = starts_with
 let exists        = exists
